# yolov_desktop

./: CMakeLists.txt  LICENSE  run_ubuntu_setup.sh  run_win_setup.bat  setup_ubuntu.sh  setup_windows.bat
docs/: Readme.md
src/: main.cpp
src/core/: config.h  detector.cpp  detector.h  types.h
src/processing/: folder_scanner.cpp  folder_scanner.h  image_processor.cpp  image_processor.h
src/ui/: image_viewer.cpp  image_viewer.h  main_window.cpp  main_window.h  results_widget.cpp  results_widget.h
src/workers/: detection_worker.cpp  detection_worker.h
